add linter on build phase

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: Build
 
 on:
   push:
@@ -21,8 +21,16 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
 
+      - name: Install golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.61
+
       - name: Install dependencies
         run: go mod tidy
 
-      - name: Run tests
-        run: go test ./...
+      - name: Run linter
+        run: golangci-lint run ./...
+
+      - name: Run unit tests
+        run: go install github.com/go-delve/delve/cmd/dlv@latest && go test ./... -v -covermode=count -coverprofile=coverage.txt
